[gd_scene load_steps=22 format=3 uid="uid://bwwywsq18j2ac"]

[ext_resource type="Script" path="res://LevelController.gd" id="1_t3b22"]
[ext_resource type="PackedScene" uid="uid://c56yvex4g3pif" path="res://Scenes/player.tscn" id="2_s5h3j"]
[ext_resource type="Script" path="res://EditableMap.gd" id="3_87vbk"]
[ext_resource type="Script" path="res://addons/zylann.hterrain/hterrain.gd" id="4_sqftk"]
[ext_resource type="Resource" path="res://Scenes/Levels/level2/data.hterrain" id="5_b52qa"]
[ext_resource type="Script" path="res://addons/zylann.hterrain/hterrain_texture_set.gd" id="6_4gba7"]
[ext_resource type="Texture2D" uid="uid://dbtnnv53ap7d7" path="res://Textures/grass_1_basecolor-1K.png" id="7_h37f5"]
[ext_resource type="Texture2D" uid="uid://doeyfpmulhmiq" path="res://Textures/Cliff_basecolor.png" id="8_8iwbd"]
[ext_resource type="Texture2D" uid="uid://7m5c5uxiaa3m" path="res://Textures/grass_1_normal-1K.png" id="9_u54t8"]
[ext_resource type="Texture2D" uid="uid://dgqwjkwa2ckuq" path="res://Textures/Cliff_normal.png" id="10_cxcxb"]
[ext_resource type="PackedScene" uid="uid://dtab7c0bq186o" path="res://Scenes/house.tscn" id="13_00hr0"]
[ext_resource type="PackedScene" uid="uid://7jfrr44c1tir" path="res://Scenes/chest.tscn" id="14_ndxgu"]
[ext_resource type="Script" path="res://navigator_spawn.gd" id="15_31cjw"]
[ext_resource type="PackedScene" uid="uid://url466m8etkf" path="res://navigator.tscn" id="16_f256h"]
[ext_resource type="PackedScene" path="res://Scenes/playback_canvas.tscn" id="17_ls85u"]
[ext_resource type="PackedScene" path="res://Scenes/player_canvas.tscn" id="18_xbvxu"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_a5k6u"]

[sub_resource type="Sky" id="Sky_gagda"]
sky_material = SubResource("ProceduralSkyMaterial_a5k6u")

[sub_resource type="Environment" id="Environment_yanan"]
background_mode = 2
sky = SubResource("Sky_gagda")

[sub_resource type="Resource" id="Resource_5we7l"]
script = ExtResource("3_87vbk")
Width = 100
Height = 100

[sub_resource type="Resource" id="Resource_v8bm5"]
script = ExtResource("6_4gba7")
mode = 0
textures = [[ExtResource("7_h37f5"), ExtResource("8_8iwbd")], [ExtResource("9_u54t8"), ExtResource("10_cxcxb")]]

[node name="Level2" type="Node3D" node_paths=PackedStringArray("navigator_spawn_points", "player")]
script = ExtResource("1_t3b22")
navigator_spawn_points = [NodePath("Start")]
player = NodePath("Player")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_yanan")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.951718, 0.306975, 0, -0.306975, 0.951718, -0.00377464, -0.0199896, 0.00757551)

[node name="Player" parent="." instance=ExtResource("2_s5h3j")]
transform = Transform3D(0.119565, 0, -0.992826, 0, 1, 0, 0.992826, 0, 0.119565, 5.16028, 0.994233, 37.7684)
Map = SubResource("Resource_5we7l")

[node name="HTerrain" type="Node3D" parent="."]
script = ExtResource("4_sqftk")
map_scale = Vector3(0.781, 1, 0.781)
_terrain_data = ExtResource("5_b52qa")
chunk_size = 16
collision_enabled = true
collision_layer = 1
collision_mask = 1
shader_type = "Classic4"
custom_shader = null
custom_globalmap_shader = null
texture_set = SubResource("Resource_v8bm5")
render_layers = 1
cast_shadow = 1
shader_params/u_ground_uv_scale_per_texture = Vector4(10, 5, 20, 20)
shader_params/u_depth_blending = true
shader_params/u_triplanar = false
shader_params/u_tile_reduction = Vector4(0, 1, 0, 0)
shader_params/u_globalmap_blend_start = null
shader_params/u_globalmap_blend_distance = null
shader_params/u_colormap_opacity_per_texture = Vector4(1, 1, 1, 1)
shader_params/u_specular = 0.5

[node name="House" parent="." instance=ExtResource("13_00hr0")]
transform = Transform3D(-0.063609, 0, -0.997975, 0, 1, 0, 0.997975, 0, -0.063609, 12.491, -0.0374413, 34.2378)

[node name="Chest" parent="." instance=ExtResource("14_ndxgu")]
transform = Transform3D(-0.999469, 0, 0.0325795, 0, 1, 0, -0.0325795, 0, -0.999469, 39.0107, 0.000104904, 38.1422)

[node name="Start" type="Marker3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.24557, 1, 34.5844)
script = ExtResource("15_31cjw")
target = NodePath("../Marker3D2")
navigator_scene = ExtResource("16_f256h")

[node name="Marker3D2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 38.5226, 1.97998, 36.7758)

[node name="PlaybackCanvas" parent="." node_paths=PackedStringArray("level_controller") instance=ExtResource("17_ls85u")]
level_controller = NodePath("..")

[node name="PlayerCanvas" parent="." instance=ExtResource("18_xbvxu")]

[node name="SpectatorCamera" type="Camera3D" parent="."]
transform = Transform3D(0.999998, 0.00171881, -0.000303073, 0, 0.173648, 0.984808, 0.00174533, -0.984806, 0.173648, 25, 34.213, 33.164)
